テスト/src/objects/order_SFO__c.object
<CustomObject>
    <fields>
        <fullName>accountID__c</fullName>
        <label>発注企業ID</label>
        <referenceTo>account_SFO__c</referenceTo>
        <relationshipName>r_account</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>accountname__c</fullName>
        <formula>accountID__r.name__c</formula>
        <label>発注企業</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>application_date__c</fullName>
        <inlineHelpText>企業からの申込書を受け取った日</inlineHelpText>
        <label>申込書受取日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>approval_date__c</fullName>
        <inlineHelpText>マネージャーが品質確認を行った日です</inlineHelpText>
        <label>完了確認日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>cancel_date__c</fullName>
        <inlineHelpText>発注者からのキャンセルの場合、日付を入力してください。</inlineHelpText>
        <label>キャンセル</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>contract_date__c</fullName>
        <label>受託日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>delivery_date__c</fullName>
        <label>納品日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>department__c</fullName>
        <label>発注部署</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inspection_date__c</fullName>
        <label>検収日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>job_memo__c</fullName>
        <label>発注メモ</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>jobowner__c</fullName>
        <label>発注担当者</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jobowner_phone__c</fullName>
        <label>発注者連絡先</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>judgment_YesNo__c</fullName>
        <inlineHelpText>受託する場合は受託日を入力してください。
辞退する場合は、辞退の連絡をした日、並びに辞退の理由を入力してください。</inlineHelpText>
        <label>判定結果</label>
        <picklist>
            <picklistValues>
                <fullName>受託</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>辞退</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>order_finished_date__c</fullName>
        <inlineHelpText>チームでの処理を完了させた日を入力</inlineHelpText>
        <label>完了日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>order_start_date__c</fullName>
        <label>開始日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>order_status__c</fullName>
        <inlineHelpText>＜ステータスについて＞
受託準備中：判定結果が受託で、開始日以前の状態
仕掛中：開始日以降
検収中：完了確認日が入力された状態
納品完了：検収日が入力された状態</inlineHelpText>
        <label>案件状況</label>
        <picklist>
            <picklistValues>
                <fullName>引合中</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>受託準備中</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>辞退</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>仕掛中</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>検収中</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>納品完了</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>企業CXL</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>orderdetail__c</fullName>
        <label>案件詳細</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ordername__c</fullName>
        <label>案件名</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ordertype__c</fullName>
        <label>案件種別</label>
        <picklist>
            <picklistValues>
                <fullName>HP作成</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>翻訳</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>その他</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>reference_date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <inlineHelpText>最初のコンタクトがあった日です</inlineHelpText>
        <label>問合せ日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>refusal_date__c</fullName>
        <label>辞退連絡日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>refusal_reason__c</fullName>
        <label>辞退理由</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>scheduled_date__c</fullName>
        <inlineHelpText>受託時に終了予定とした日を入力</inlineHelpText>
        <label>終了予定日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>shippingdocument_date__c</fullName>
        <label>確認書類発送日</label>
        <type>Date</type>
    </fields>
    <label>受託案件</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <displayFormat>No.{yymm}{000}</displayFormat>
        <label>受託番号</label>
        <type>AutoNumber</type>
    </nameField>
    <namedFilters>
        <fullName>nf_01IA0000001tyvPMAQ_00NA0000007QGHQMA4</fullName>
        <active>true</active>
        <errorMessage>案件状況がアサイン可能なステータスではありません。（失注したものや検収完了した案件にはアサインできません。）</errorMessage>
        <field>assign_SFO__c.assigned_order__c</field>
        <filterItems>
            <field>order_SFO__c.order_status__c</field>
            <operation>equals</operation>
            <value>引合中, 受託準備中, 仕掛中, 検品中</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>assign_担当チーム</name>
    </namedFilters>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>DC_approval_date</fullName>
        <active>true</active>
        <errorConditionFormula>OR (order_finished_date__c &gt; approval_date__c , approval_date__c &gt; TODAY() )</errorConditionFormula>
        <errorDisplayField>approval_date__c</errorDisplayField>
        <errorMessage>完了確認日は完了日以降で、本日以前となります</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DC_inspection_date</fullName>
        <active>true</active>
        <errorConditionFormula>OR (approval_date__c &gt; inspection_date__c , inspection_date__c &gt; TODAY() )</errorConditionFormula>
        <errorDisplayField>inspection_date__c</errorDisplayField>
        <errorMessage>検収日は完了確認日以降で、本日以前となります</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DC_order_finished_date</fullName>
        <active>true</active>
        <errorConditionFormula>OR (order_start_date__c &gt; order_finished_date__c , order_finished_date__c &gt; TODAY() )</errorConditionFormula>
        <errorDisplayField>order_finished_date__c</errorDisplayField>
        <errorMessage>完了日は開始日以降で、本日以前となります</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DC_order_start_date_after_reference_date</fullName>
        <active>true</active>
        <errorConditionFormula>reference_date__c &gt; order_start_date__c</errorConditionFormula>
        <errorDisplayField>order_start_date__c</errorDisplayField>
        <errorMessage>開始日は問合せ日以降になります</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DC_reference_date_beforetoday</fullName>
        <active>true</active>
        <errorConditionFormula>reference_date__c &gt; TODAY()</errorConditionFormula>
        <errorDisplayField>reference_date__c</errorDisplayField>
        <errorMessage>問合せ日は本日以前になります</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>NGblank_contract_date</fullName>
        <active>true</active>
        <errorConditionFormula>AND ( ISPICKVAL( judgment_YesNo__c , &apos;受託&apos;) , ISNULL ( contract_date__c ) = TRUE )</errorConditionFormula>
        <errorDisplayField>contract_date__c</errorDisplayField>
        <errorMessage>判定結果「受託」の場合、受託日も入力してください</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>NGblank_order_start_date</fullName>
        <active>true</active>
        <errorConditionFormula>AND ( ISPICKVAL ( judgment_YesNo__c , &apos;&apos; ) , ISNULL ( order_start_date__c ) = FALSE )</errorConditionFormula>
        <errorDisplayField>judgment_YesNo__c</errorDisplayField>
        <errorMessage>開始日を入力する場合、判定結果を登録してください</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>NGblank_refusal_date</fullName>
        <active>true</active>
        <errorConditionFormula>AND ( ISPICKVAL ( judgment_YesNo__c , &apos;&apos; ) , ISNULL ( refusal_date__c ) = FALSE )</errorConditionFormula>
        <errorDisplayField>refusal_date__c</errorDisplayField>
        <errorMessage>辞退連絡日を入力する場合、判定結果を登録してください</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>NGblank_refusal_reason</fullName>
        <active>true</active>
        <errorConditionFormula>AND ( ISPICKVAL( judgment_YesNo__c , &apos;辞退&apos;) , ISBLANK ( refusal_reason__c  ) = TRUE )</errorConditionFormula>
        <errorDisplayField>refusal_reason__c</errorDisplayField>
        <errorMessage>判定結果「辞退」の場合、辞退理由も入力してください</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>NGinput_approval_date</fullName>
        <active>true</active>
        <errorConditionFormula>AND ( ISPICKVAL( judgment_YesNo__c , &apos;辞退&apos;) , ISNULL ( approval_date__c ) = FALSE )</errorConditionFormula>
        <errorDisplayField>approval_date__c</errorDisplayField>
        <errorMessage>判定結果「辞退」の場合、完了確認日の入力はできません</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>NGinput_cancel</fullName>
        <active>true</active>
        <errorConditionFormula>AND ( ISPICKVAL( judgment_YesNo__c , &apos;辞退&apos;) , ISNULL ( cancel_date__c ) = FALSE )</errorConditionFormula>
        <errorDisplayField>cancel_date__c</errorDisplayField>
        <errorMessage>判定結果「辞退」の場合、キャンセルの入力はできません</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>NGinput_inspection_date</fullName>
        <active>true</active>
        <errorConditionFormula>AND ( ISPICKVAL( judgment_YesNo__c , &apos;辞退&apos;) , ISNULL ( inspection_date__c ) = FALSE )</errorConditionFormula>
        <errorDisplayField>inspection_date__c</errorDisplayField>
        <errorMessage>判定結果「辞退」の場合、検収日の入力はできません</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>NGinput_order_start_date</fullName>
        <active>true</active>
        <errorConditionFormula>AND ( ISPICKVAL( judgment_YesNo__c , &apos;辞退&apos;) , ISNULL ( order_start_date__c ) = FALSE )</errorConditionFormula>
        <errorDisplayField>order_start_date__c</errorDisplayField>
        <errorMessage>判定結果「辞退」の場合、開始日の入力はできません</errorMessage>
    </validationRules>
</CustomObject>